# stm32_cmake

./: .gitignore  CMakeLists.txt  README.md  build.sh  code-format.sh
CMake/: platform.cmake
libraries/: CMakeLists.txt
libraries/CMSIS/: CMakeLists.txt
libraries/STM32F1xx_HAL_Driver/: CMakeLists.txt
libraries/STM32F4xx_HAL_Driver/: CMakeLists.txt
libraries/hal_conf/: stm32f1xx_hal_conf.h  stm32f4xx_hal_conf.h
libraries/linker/: stm32f407vgtx.ld
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/inc/app/: app_tasks.h  user_io.h  version.h
src/app/src/: main.c  user_io.c
src/core/: fault_handlers.c
src/drv/: CMakeLists.txt
src/drv/inc/drv/: delay.h  io.h  softTimer.h  soft_timer.h
src/drv/src/: io.c  softTimer.c  soft_timer.c
